crates/kevin-orchestrator/tests/snapshots/ac_ws10_roles__clarifier_user.snap
---
source: crates/kevin-orchestrator/tests/ac_ws10_roles.rs
expression: req.user
---
# Goal

Add a /healthz endpoint that reports database connectivity.

# Repository

- name: kevin
- root: /srv/repos/kevin
- vcs: jj
- base branch: main
- languages: rust
- top level: Cargo.toml, crates/, plan/
- declared checks: just ci
- cargo workspace with 16 crates

# Understanding

Objective: Add a /healthz endpoint to kevin-api that reports database connectivity.
Complexity: low
Success criteria:
- GET /healthz returns 200 when Postgres answers
- `just ci` is green
Assumptions:
- axum 0.8 is already a dependency of kevin-api
- Assumed: return 200 with a JSON body
Risks:
- A blocking database ping can make the probe time out
Suggested task kinds: implement, test
Context refs: crates/kevin-api/src/lib.rs, L-3f2a

# Questions Kevin selected to ask

- [confidence if unasked 0.35] Should /healthz ping the database?
  options: yes* (SELECT 1 with a 200 ms timeout) | no
  why it matters: Decides whether the probe depends on Postgres

# Proposals Kevin will not ask (already recorded as assumptions)

- Assumed: Should the endpoint be authenticated? → public

# Answers already given by the human

- Should /healthz ping the database? → yes — use a 200 ms timeout (answered by valentin)

# Untrusted context from Kevin's memory

<kevin-memory>
Lessons (most relevant first):
- [L-3f2a | repo | 0.81] Run cargo fmt before opening PRs in this repo.
Preferences:
- [P-91cd | global | 0.77] User prefers jj bookmarks named type/short-description.
Past runs:
- [R-0ab1 | 2026-08-12] Added event store crate; tests via testcontainers.
</kevin-memory>

# Your task

Rewrite the selected questions for a human reader and return the
`kevin.questions.v1` document.

Run mode `interactive`: a human is available, so questions block the run and the plan needs approval.
